styles.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}


/* Custom Properties */

:root {
  --dark-blue: #263547;
  --light-blue: #1c415e;
  --dark-grey: #c3c3c3;
  --light-grey: #e5e5e5;
  --red-shade: #fd4346;
}

/* General Page Styles */


html {
  color: var(--light-grey);
  font-family: 'Open sans', sans-serif;
  font-size: 62.5%;
}

body {
  background-color: var(--dark-blue);
}

img {
  width: 100%;
}

ul {
  list-style-type: none;
  padding: 0;
}

.wrapper {
  height: 100%;
  max-width: 1400px;
  width: 95%;
  margin: 0 auto;
}

/* ! Class for hiding and showing hamburger menu */
.menu-visible {
  transform: translateX(0);
}

/* Font Styles */

h1 {
  font-size: 10rem;
}

h2 {
  color: var(--red-shade);
  font-size: 2.6rem;
  letter-spacing: 0.3rem;
  text-transform: uppercase;
}

h3 {
  font-size: 5.8rem;
  margin: 3rem 0;
  text-transform: capitalize;
}

h4 {
  font-size: 3rem;
  margin: 10px;
  text-transform: capitalize;
}

p {
  color: var(--dark-grey);
  font-size: 2.4rem;
  font-family: 'Lato', sans-serif;
  line-height: 3.5rem;
}

a {
  color: var(--light-grey);
  display: inline-block;
  text-decoration: none;
  transition: color 0.3s ease;
}

a:focus,
a:hover {
  color: var(--red-shade);
}

i {
  display: inline-block;
}

i.work-reference {
  font-style: italic;
}

/* Header */

header {
  /* height: 100vh; */
  min-height: 800px;
  padding-top: 20px;
  position: relative;
}

header::before {
  content: '';
  background-color: var(--light-blue);
  background-image: url(./assets/portrait.jpg);
  background-size: cover;
  background-position: 50% 30%;
  border-radius: 50%;
  /* height: 52vw;
  width: 52vw;
  max-height: 520px;
  max-width: 520px; */
  height: 520px;
  width: 520px;
  position: absolute;
  top: 20%;
  left: 50%;
  transform: translateX(-50%);
  z-index: -1;
}

header nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.logo {
  flex-shrink: 0;
  width: 100px;
}

.menu-button {
  background: none;
  border: none;
  color: var(--light-grey);
  cursor: pointer;
  font-size: 4rem;
  
  /* Hide button until screen is over 650px wide */
  display: none;
}

header nav ul {
  display: flex;
}

header nav li {
  font-size: 3.6rem;
}

header nav a {
  color: var(--light-grey);
  font-weight: 700;
  padding: 1rem 2rem;
  position: relative;
  text-decoration: none;
  transition: color 0.3s ease-in-out;
}

header nav a::after {
  content: '';
  background-color: var(--red-shade);
  height: 4%;
  width: 100%;
  
  position:absolute;
  bottom: 0;
  left: 50%;
  transform: scaleX(0.0) translate(-50%, -50%);
  transform-origin: 0% 0%;

  transition: transform 0.3s ease-in-out;
}

header nav a:hover,
header nav a:focus {
  color: var(--red-shade);
}

header nav a:hover::after,
header nav a:focus::after {
  transform: scaleX(0.9) translate(-50%, -50%);
}

.header-content {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  margin-top: 300px;
}

.header-content h1 {
  /* min-width: 415px; */
  /* max-width: 35%; */
  border-left: 5px solid var(--red-shade);
  border-bottom: 5px solid var(--red-shade);
  /* padding-left: 20px; */
  width: 480px;
}

.header-content h3 {
  /* align-self: flex-end; */
  border-right: 5px solid var(--red-shade);
  border-bottom: 5px solid var(--red-shade);
  /* padding-right: 20px; */
  text-align: right;
  width: 480px;
}
/* ... */

